NN-1639: Oops don't need a link if no account was found